[package]
name = "bevy_tween_helpers"
version = "0.2.2"
edition = "2024"
repository = "https://github.com/Rabbival/bevy_tween_helpers"
homepage = "https://github.com/Rabbival/bevy_tween_helpers"
license = "MIT OR Apache-2.0"
description = "Optional, additional utilities for the bevy_tween crate"
authors = ["Rabbival"]
readme = "README.md"
keywords = ["bevy", "tween", "tweening"]
categories = ["game-development"]

[dependencies]
bevy_tween = "0.10.0"

[dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
    "bevy_core_pipeline",
    "x11"
]
