[package]
name = "bevy_tween_helpers"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/Rabbival/bevy_tween_helpers"
homepage = "https://github.com/Rabbival/bevy_tween_helpers"
license = "MIT OR Apache-2.0"
description = "Optional, additional utilities for the bevy_tween crate"
authors = ["Rabbival"]
readme = "README.md"
keywords = ["bevy", "tween", "tweening"]
categories = ["game-development"]

[dependencies]
bevy_tween = { git = "https://github.com/Multirious/bevy_tween", branch = "saving_a_copy_so_i_can_keep_working" }

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = [
    "bevy_core_pipeline",
    "x11"
]
